TopBrands :: margin on mobile fix

--- a/mercury/inc/custom-fields/assets/css/custom-style.css
+++ b/mercury/inc/custom-fields/assets/css/custom-style.css
@@ -784,10 +784,6 @@ a.btn:hover {
     .custom-wrapper .space-page-wrapper {
         margin: 0 15px;
     }
-
-    .custom-wrapper .space-page-wrapper p {
-        margin-right: 20px;
-    }
 }
 
 .expert-slider-section {
